--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,11 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Second description 
   <br><br>
+  <a href="https://prudhvipvp.github.io/pdf/Resume_Ajeya_Krishna(1) (1) (1).pdf">View My Resume</a>
+  <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
-  <a href="https://github.com/predator-1-ml">View My Github Profile</a> 
+  <a href="https://github.com/predator-1-ml">View my Github Profile
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
