--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Ajeya Krishna # your name (or website title) here
 logo: "/images/IMG_20200916_003646.jpg"
 description: >
-  Final Year UG || IIT Ropar, Btech in Electrical Engineering with minor in Computer Science.
+  Fourth Year in IDD || IIT BHU, IDD in Engineering Physics.
   <br>
   Primarily interested in Machine Learning and Software Development.
   <br>
-  <a href="https://prudhvipvp.github.io/pdf/Resume_Ajeya_Krishna(1)(1)(1).pdf">View My Resume</a>
+  <a href="https://predator-1-ml.github.io/pdf/Resume_Ajeya_Krishna(1)(1)(1).pdf">View My Resume</a>
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
