--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ description: >
   <a href="https://predator-1-ml.github.io/pdf/Resume_Ajeya_Krishna(1)(1)(1).pdf">View My Resume</a>
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
+  <br>
+  <a href='https://https://github.com/predator-1-ml/'>View My Github Profile</a>
   
   
 theme: jekyll-theme-minimal
