--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
   <br>
   Primarily interested in Machine Learning and Software Development.
   <br>
-  <a href="https://predator-1-ml.github.io/pdf/Resume_Ajeya_Krishna(1)(1)(1).pdf">View My Resume</a>
+  <a href="https://predator-1-ml.github.io/pdf/Resume_Ajeya_Krishna(1).pdf">View My Resume</a>
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
