--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
-  <a href='https://https://github.com/predator-1-ml/'>View My Github Profile</a>
+  <a href="https://github.com/predator-1-ml">View My Github Profile</a>
   
   
 theme: jekyll-theme-minimal
