--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ajeya Krishna # your name (or website title) here
-logo: "/images/adobe_crop.jpg"
+logo: "/images/filename.png"
 description: >
   Fourth Year in IDD || IIT BHU, IDD in Engineering Physics.
   <br>
