--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/filename.png"
 description: >
   Fourth Year in IDD || IIT BHU, IDD in Engineering Physics.
   <br>
-  Primarily interested in Machine Learning and Software Development.
+  Primarily interested in Data Analytics and Machine Learning. 
   <br>
   <a href="https://predator-1-ml.github.io/pdf/17173003_Ajeya_Krishna_Analytics.pdf">View My Resume</a>
   <br>
