--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ajeya Krishna # your name (or website title) here
 logo: "/images/filename.png"
 description: >
-  Fourth Year in IDD || IIT BHU, IDD in Engineering Physics.
+  Senior Undergraduate in Engineering Physics, IIT BHU.
   <br>
   Primarily interested in Data Analytics and Machine Learning. 
   <br>
