made changes to resume about section

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Ajeya Krishna # your name (or website title) here
 logo: "/images/filename.png"
 description: >
-  Senior Undergraduate in Engineering Physics, IIT BHU.
+  Machine Learning Engineer | SaaS Labs
   <br>
-  Primarily interested in Data Analytics and Machine Learning. 
+  I have a strong interest in LLM, Conversational Intelligence, NLP, and Computer Vision.
   <br>
-  <a href="https://predator-1-ml.github.io/pdf/17173003_Ajeya_Krishna_Analytics.pdf">View My Resume</a>
+  <a href="https://predator-1-ml.github.io/pdf/Ajeya_Krishna_Resume.pdf">View My Resume</a>
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
