--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,7 @@ description: >
   <a href="https://github.com/predator-1-ml">View My Github Profile</a>
   
   
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
