--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Ajeya Krishna # your name (or website title) here
 logo: "/images/filename.png"
 description: >
-  Machine Learning Engineer | SaaS Labs
+  Machine Learning Engineer | **SaaS Labs**
   <br>
-  I have a strong interest in LLM, Conversational Intelligence, NLP, and Computer Vision.
+  I have a strong interest in LLM, NLP, Conversational Intelligence, Prompt Engineering and Computer Vision.
   <br>
   <a href="https://predator-1-ml.github.io/pdf/Ajeya_Krishna_Resume.pdf">View My Resume</a>
   <br>
