made saas labs bold

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Ajeya Krishna # your name (or website title) here
 logo: "/images/filename.png"
 description: >
-  Machine Learning Engineer | <b>SaaS Labs</b>
+  <b> Machine Learning Engineer </b> | <b>SaaS Labs</b>
   <br>
   I have a strong interest in LLM, NLP, Conversational Intelligence, Prompt Engineering and Computer Vision.
   <br>
