--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@ logo: "/images/filename.png"
 description: >
   Machine Learning Engineer | <b>SaaS Labs</b>
   <br>
-  I have a strong interest in LLM, NLP, Conversational Intelligence, Prompt Engineering and Computer Vision.
+  I have a strong interest in LLM, NLP, Conversational Intelligence, Prompt Engineering, and Computer Vision.
   <br>
-  <a href="https://predator-1-ml.github.io/pdf/Ajeya_Krishna_Resume.pdf">View My Resume</a>
+  <a href="pdf/Experience_resume_final.pdf">View My Resume</a>
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
-  <a href="https://github.com/predator-1-ml">View My Github Profile</a>
+  <a href="https://github.com/predator-1-ml">View My GitHub Profile</a>
   
   
 remote_theme: pages-themes/minimal@v0.2.0
