--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ajeya Krishna # your name (or website title) here
-logo: "images/WhatsApp Image 2023-10-05 at 11.42.19 AM.jpeg"
+logo: "images/new_updated_circle_image.png"
 description: >
   Machine Learning Engineer | <b>SaaS Labs</b>
   <br>
