--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
   <br>
   I have a strong interest in LLM, NLP, Conversational Intelligence, Prompt Engineering, and Computer Vision.
   <br>
-  <a href="pdf/Ajeya_New_Updated_Resume.pdf">View My Resume</a>
+  <a href="pdf/Ajeya_New_3_years.pdf">View My Resume</a>
   <br>
   <a href="https://www.linkedin.com/in/ajeya-krishna12/">View My LinkedIn Profile</a> 
   <br>
